Basic Implementation on todolist

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "todolistapp",
   "version": "1.0.0",
   "description": "This is a todo list app",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
